# planb-lpm

./: .gitignore  CMakeLists.txt  CONTRIBUTING  LICENSE  Makefile  README.md  pyproject.toml
examples/: basic_usage.py  gen_sweep.sh  generate_sample.py  mrt_to_fib.py  run_sweep.sh
include/: lpm6.hpp
python/: binding.cpp
src/: ipv6_util.hpp  main.cpp
tests/: bench_mt.cpp  bench_naive.cpp  bench_stats.hpp  bench_update.cpp  patricia.hpp  test_correctness.cpp
